<resources>
    <string name="app_name">My calculator</string>
    <string name="button_percent">%</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_division">/</string>
    <string name="button_clear">C</string>
    <string name="button_multiplication">*</string>
    <string name="button_back_space">⌫</string>
    <string name="button_equals">=</string>
    <string name="button_comma">,</string>
    <string name="answer">ответ</string>
    <string name="equation">уравнение</string>
    <string name="_5_5">5+5 =</string>
    <string name="_10">10</string>

</resources>