<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/graphiteboard" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_percent"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_0"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_comma"
        app:layout_constraintStart_toEndOf="@+id/button_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_comma"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_comma"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintStart_toEndOf="@+id/button_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_equals"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_comma"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_1"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_percent"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_2"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_3"
        android:textSize="40sp"
        app:cornerRadius="30dp"

        app:layout_constraintBottom_toTopOf="@+id/button_comma"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintStart_toEndOf="@+id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_4"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_5"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_6"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_7"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_8"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_9"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_minus"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_plus"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_multiplication"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_division"
        app:layout_constraintStart_toEndOf="@+id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_clear"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_multiplication"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_division"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_back_space"
        app:layout_constraintStart_toEndOf="@+id/button_multiplication" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#B2322F2F"
        android:text="@string/button_back_space"
        android:textSize="30sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_division"
        app:layout_constraintTop_toTopOf="@+id/button_division"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/equation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="40sp"
        android:text="@string/_5_5"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="100sp"
        android:text="@string/_10"
        android:gravity="end"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equation" />

</androidx.constraintlayout.widget.ConstraintLayout>